--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -144,11 +144,11 @@ jobs:
 
       - name: save helm chart to local registry
         run: |
-          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/workadventure:1.0.0+c97fbf8f31
+          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/workadventure:1.0.0-c97fbf8f31
 
       - name: publish chart to acr
         run: |
-          helm chart push ${{ env.ACR_NAME }}.azurecr.io/workadventure:1.0.0+c97fbf8f31
+          helm chart push ${{ env.ACR_NAME }}.azurecr.io/workadventure:1.0.0-c97fbf8f31
 
 
 #
