--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: workadventure
-version: 1.0.0+e710bbfcdc
+version: 1.0.0-8bb768778a
 appVersion: v1.1.0
 description: A Helm chart for Kubernetes
 type: application
