--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -134,23 +134,23 @@ jobs:
       - name: test
         run: echo ${{ needs.lint-test.outputs.new_tag }}
 
-#      - name: Setting branch name variable
-#        run: echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
-#
-#      - name: install helm
-#        uses: Azure/setup-helm@v1.1
-#
-#      - name: login to acr using helm
-#        run: |
-#          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
-#
-#      - name: save helm chart to local registry
-#        run: |
-#          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/workadventure:1.0.0-c97fbf8f31
-#
-#      - name: publish chart to acr
-#        run: |
-#          helm chart push ${{ env.ACR_NAME }}.azurecr.io/workadventure:1.0.0-c97fbf8f31
+      - name: Setting branch name variable
+        run: echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
+
+      - name: install helm
+        uses: Azure/setup-helm@v1.1
+
+      - name: login to acr using helm
+        run: |
+          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
+
+      - name: save helm chart to local registry
+        run: |
+          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/workadventure:${{ needs.lint-test.outputs.new_tag }}
+
+      - name: publish chart to acr
+        run: |
+          helm chart push ${{ env.ACR_NAME }}.azurecr.io/workadventure:${{ needs.lint-test.outputs.new_tag }}
 
 
 #
