--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -134,11 +134,11 @@ jobs:
           ref: ${{ needs.lint-test.outputs.new_sha }}
           fetch-depth: 0
       - name: test
-        run: echo ${{ needs.lint-test.outputs.new_tag }}
+        run: echo $GITHUB_REF | awk -F / '{print $3}'
 
-#      - name: Setting branch name variable
-#        run: echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
-#
+      - name: Setting branch name variable
+        run: echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
+
 #      - name: install helm
 #        uses: Azure/setup-helm@v1.1
 #
