--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -11,9 +11,7 @@ on:
 
 env:
   HELM_EXPERIMENTAL_OCI: 1
-  HELM_VERSION_TO_INSTALL: 3.5.0
   ACR_NAME: iitscharts
-  ACR_REPO_NAME: workadventure
   ACR_USER_NAME: iits-releaser
 
 jobs:
@@ -34,13 +32,6 @@ jobs:
           echo "::set-output name=git_pr_sha::${GIT_PR_SHA}"
           echo "::set-output name=git_pr_sha_short::${GIT_PR_SHA_SHORT}"
           echo "GIT_SHA_SHORT=`echo ${GIT_PR_SHA_SHORT}`" >> $GITHUB_ENV
-#      - name: Add SHORT_SHA env property with commit short sha
-#        run: echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-
-#      - name: helm-check
-#        uses: igabaydulin/helm-check-action@0.1.4
-#        env:
-#          CHART_LOCATION: .
 
       - name: Get new tag
         id: newtag
@@ -52,19 +43,14 @@ jobs:
             echo "It should have SemVer numbers and be processed by '(?<=version:)\d+\.\d+\.\d+' regexp"
             exit 1
           fi
-          echo "NEW_TAG=$(echo "$ct-${{ env.GIT_SHA_SHORT }}")" >> $GITHUB_ENV
           echo "::set-output name=git_new_tag::$ct-${{ env.GIT_SHA_SHORT }}"
 
-      - name: check version
-        run: |
-          echo ${{ env.NEW_TAG }}
-          echo ${{ env.GIT_SHA_SHORT }}
 
       - name: Find and replace version in Chart.yaml
         uses: jacobtomlinson/gha-find-replace@master
         with:
           find: "version:.*"
-          replace: "version: ${{ env.NEW_TAG }}"
+          replace: "version: ${{ steps.newtag.outputs.git_new_tag }}"
           include: Chart.yaml
 
       - name: Commit and push changes
@@ -72,13 +58,13 @@ jobs:
         with:
           add: Chart.yaml
           message: "[Auto-update] version updated"
-          tag: "${{ env.NEW_TAG }}"
+          tag: ${{ steps.newtag.outputs.git_new_tag }}
 
       - name: Bump version and push tag
         uses: ChloePlanet/github-tag-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_TAG: ${{ env.NEW_TAG }}
+          CUSTOM_TAG: ${{ steps.newtag.outputs.git_new_tag }}
 
       - name: get sha
         id: sha
@@ -125,88 +111,27 @@ jobs:
     name: Release chart to ACR
     runs-on: ubuntu-latest
     steps:
-      - name: TEMP test ref
-        run: echo ${{ needs.lint-test.outputs.new_sha }}
 
       - name: Checkout
         uses: actions/checkout@v2
         with:
           ref: ${{ needs.lint-test.outputs.new_sha }}
           fetch-depth: 0
-      - name: test
-        run: |
-          echo ${{ github.event.repository.name }}
-          echo $GITHUB_REF | awk -F / '{print $3}'
 
       - name: Setting branch name variable
         run: echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
 
-#      - name: install helm
-#        uses: Azure/setup-helm@v1.1
-#
-#      - name: login to acr using helm
-#        run: |
-#          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
-#
-#      - name: save helm chart to local registry
-#        run: |
-#          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/workadventure:${{ needs.lint-test.outputs.new_tag }}
-#
-#      - name: publish chart to acr
-#        run: |
-#          helm chart push ${{ env.ACR_NAME }}.azurecr.io/workadventure:${{ needs.lint-test.outputs.new_tag }}
+      - name: Install helm
+        uses: Azure/setup-helm@v1.1
 
+      - name: Login to ACR using helm
+        run: |
+          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
 
-#
-#      - name: TEMP check chart version
-#        run: |
-#          echo ${{ env.BRANCH_NAME }}
-#          cat Chart.yaml
-#
-#      - name: pull-request-repo
-#        uses: iits-consulting/action-pull-request-another-repo@main
-#        env:
-#          API_TOKEN_GITHUB: ${{ secrets.DLAVRUSHKO_PERSONAL_ACCESS_TOKEN }}
-#        with:
-#          source_folder: .
-#          destination_repo: 'iits-consulting/helm-charts'
-#          destination_folder: 'charts'
-#          destination_base_branch: master
-#          destination_head_branch: ${{ env.BRANCH_NAME }}
-######################
-######################
-######################
-#          user_email: 'denis.lavrushko@iits-consulting.de'
-#          user_name: 'dlavrushk0'
-#          labels: 'auto-deployed, chartName=workadventure'
-####################
-####################
-####################
+      - name: Save helm chart to locally
+        run: |
+          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/${{ github.event.repository.name }}:${{ needs.lint-test.outputs.new_tag }}
 
-
-############ leave this for main chart repo #############
-#      - uses: actions/setup-python@v2
-#        with:
-#          python-version: 3.7
-#
-#      - name: Set up chart-txesting
-#        uses: helm/chart-testing-action@v2.0.1
-#
-#      - name: Run chart-testing (list-changed)
-#        id: list-changed
-#        run: |
-#          changed=$(ct list-changed)
-#          if [[ -n "$changed" ]]; then
-#            echo "::set-output name=changed::true"
-#          fi
-#
-#
-#      - name: Run chart-testing (lint)
-#        run: ct lint
-#
-#      - name: Create kind cluster
-#        uses: helm/kind-action@v1.0.0
-#        if: steps.list-changed.outputs.changed == 'true'
-#
-#      - name: Run chart-testing (install)
-#        run: ct install
+      - name: Publish chart to the ACR
+        run: |
+          helm chart push ${{ env.ACR_NAME }}.azurecr.io/${{ github.event.repository.name }}:${{ needs.lint-test.outputs.new_tag }}
