--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -14,4 +14,14 @@ jobs:
           REQUIRED_LABELS_ANY: "major,minor,patch"
           REQUIRED_LABELS_ANY_DESCRIPTION: "Select at least one label ['major','minor','patch']"
 
-
+#      - id: bump
+#        uses: zwaldowski/match-label-action@v1
+#        with:
+#          allowed: major,minor,patch
+#
+#      - uses: zwaldowski/semver-release-action@v1
+#        id: next_version
+#        with:
+#          bump: ${{ steps.bump.outputs.match }}
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#      - run: echo "${{ steps.next_version.outputs.version }}"
