--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -12,8 +12,7 @@ jobs:
         uses: jesusvasquez333/verify-pr-label-action@v1.4.0
         with:
           github-token: '${{ secrets.GITHUB_TOKEN }}'
-          valid-labels: 'major, minor, patch'
-          invalid-labels: 'help wanted, invalid'
+          valid-labels: "major, minor, patch"
           pull-request-number: '${{ github.event.pull_request.number }}'
 #        uses: yogevbd/enforce-label-action@2.1.0
 #        with:
