--- a/.github/workflows/enforce-pr-labels-by-workflow.yml
+++ b/.github/workflows/enforce-pr-labels-by-workflow.yml
@@ -1,8 +1,10 @@
-name: Enforce PR labels (major, minor or patch)
+name: Enforce PR labels (major, minor or patch) after build
 
 on:
-  pull_request:
-    types: [labeled, unlabeled, opened, edited, synchronize]
+  workflow_run:
+    workflows: ["Lint, PR, pre-Release"]
+    types: [completed]
+
 jobs:
   enforce-label:
     name: Labels check
