--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -72,26 +72,26 @@ jobs:
       new_sha: ${{ steps.sha.outputs.sha }}
       new_tag: ${{ steps.newtag.outputs.git_new_tag }}
 
-#  make-local-pr:
-#    needs: [lint]
-#    name: Make/Update local PR
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-#      - name: Make/Update local PR
-#        uses: repo-sync/pull-request@v2
-#        with:
-#          destination_branch: "main"
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
-#          pr_template: ".github/pull_request_template.md"
-#          pr_reviewer: "wei,worker"
-#          pr_label: "auto-pr"
+  make-local-pr:
+    needs: [lint]
+    name: Make/Update local PR
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+      - name: Make/Update local PR
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "main"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
+          pr_template: ".github/pull_request_template.md"
+          pr_reviewer: "wei,worker"
+          pr_label: "auto-pr"
 
   make-external-pr:
     needs: [lint]
