--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -1,10 +1,8 @@
-name: Enforce PR labels (major, minor or patch) after build
+name: Enforce PR labels (major, minor or patch)
 
 on:
-  workflow_run:
-    workflows: ["Lint, PR, pre-Release"]
-    types: [completed]
-
+  pull_request:
+    types: [labeled, unlabeled, opened, edited, synchronize]
 jobs:
   enforce-label:
     name: Labels check
