--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -22,6 +22,17 @@ jobs:
 
       - run: echo "${{ steps.pr_info.outputs.labels }}"
 
+      - uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
+
+      - uses: actions-ecosystem/action-bump-semver@v1
+        id: bump_semver
+        with:
+          current_version: ${{ steps.get-latest-tag.outputs.tag }}
+          level: ${{ steps.pr_info.outputs.labels }}
+
+      - run: echo "${{ steps.bump_semver.outputs.new_version }}"
+
 #      - id: bump
 #        uses: zwaldowski/match-label-action@v1
 #        with:
