--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: workadventure
-version: 1.0.0-cff5222509
+version: 1.1.0
 appVersion: v1.1.0
 description: A Helm chart for Kubernetes
 type: application
