--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: workadventure
-version: 1.1.2-9c98a36ced
+version: 1.1.3
 appVersion: v1.1.0
 description: A Helm chart for Kubernetes
 type: application
