--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -3,7 +3,7 @@ name: Lint, PR, pre-Release
 on:
   push:
     paths-ignore:
-#      - ".github/**"
+      - ".github/**"
       - "*.md"
       - "LICENSE"
     branches-ignore:
@@ -23,7 +23,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - id: identify
+      - name: Set variables and outputs
+        id: identify
         run: |
           export GIT_PR_SHA="${{ github.sha }}"
           export GIT_PR_SHA_SHORT="${GIT_PR_SHA:0:10}"
@@ -59,7 +60,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CUSTOM_TAG: ${{ steps.newtag.outputs.git_new_tag }}
-      - name: get sha
+      - name: Get sha
         id: sha
         run: |
           sha_new=$(git rev-parse HEAD)
@@ -95,7 +96,7 @@ jobs:
 
   make-external-pr:
     needs: [lint]
-    name: Release chart to ACR
+    name: Release chart to the ACR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -107,7 +108,7 @@ jobs:
         run: echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
       - name: Install helm
         uses: Azure/setup-helm@v1.1
-      - name: Login to ACR using helm
+      - name: Login to the ACR using helm
         run: |
           echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
       - name: Save helm chart to locally
