--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -117,3 +117,31 @@ jobs:
       - name: Publish chart to the ACR
         run: |
           helm chart push ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
+#      - name: Build notification
+#        if: always()
+#        uses: adamkdean/simple-slack-notify@master
+#        with:
+#          channel: '#notifications-charts'
+#          status: ${{ job.status }}
+#          success_text: '${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }} build completed successfully'
+#          failure_text: '${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }} failed'
+#          cancelled_text: '${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }} was cancelled'
+#          fields: |
+#            [
+#              {
+#                "title": "Action URL",
+#                "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}",
+#                "short": false
+#              },
+#              {
+#                "title": "Version",
+#                "value": "High",
+#                "short": false
+#              }
+#            ]
+      - name: Notify slack
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: pullreminders/slack-action@master
+        with:
+          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
