--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   release-stable:
-    name: Release new chart version
+    name: Enroll new chart version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
