--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -144,9 +144,9 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: pullreminders/slack-action@master
         with:
-          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
-#          args: |
-#            {
-#              "channel": "C02AJKXC8UT",
-#              "text":"Hello world"
-#            }
+#          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
+          args: |
+            '{
+              "channel": "C02AJKXC8UT",
+              "text":"Hello world"
+            }'
