--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -145,7 +145,7 @@ jobs:
         uses: pullreminders/slack-action@master
         with:
 #          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
-          args: |
+          args:
             '{
               \"channel\": \"C02AJKXC8UT\",
               \"text\":\"Hello world\"
