--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -147,6 +147,31 @@ jobs:
 #          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
           args:
             '{
-              \"channel\": \"C02AJKXC8UT\",
-              \"text\":\"Hello world\"
+              \"blocks\": [
+                {
+                  \"type\": \"section\",
+                  \"text\": {
+                    \"type\": \"mrkdwn\",
+                    \"text\": \"Hello, Assistant to the Regional Manager Dwight! *Michael Scott* wants to know where youd like to take the Paper Company investors to dinner tonight.\n\n *Please select a restaurant:*\"
+                  }
+                },
+                {
+                  \"type\": \"section\",
+                  \"text\": {
+                    \"type\": \"mrkdwn\",
+                    \"text\": \"This is a section block with a button.\"
+                  },
+                  \"accessory\": {
+                    \"type\": \"button\",
+                    \"text\": {
+                      \"type\": \"plain_text\",
+                      \"text\": \"Click Me\",
+                      \"emoji\": true
+                    },
+                    \"value\": \"click_me_123\",
+                    \"url\": \"https://google.com\",
+                    \"action_id\": \"button-action\"
+                  }
+                }
+              ]
             }'
