--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -147,6 +147,7 @@ jobs:
 #          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
           args:
             '{
+              \"channel\":\"C02AJKXC8UT\",
               \"blocks\": [
                 {
                   \"type\": \"section\",
