--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -109,9 +109,9 @@ jobs:
           echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
       - name: Retrieve slack message template
         id: slack_template
-        run: echo "::set-output name=MSG_TEMPLATE::$(cat .github/success_slack_message.tmpl)"
+        run: echo "MY_STRING=$(cat .github/success_slack_message.tmpl) >> $GITHUB_ENV
       - name: TEST template variable
-        run: echo ${{ steps.slack_template.outputs.MSG_TEMPLATE }}
+        run: echo ${{ env.MY_STRING }}
 #      - name: Install helm
 #        uses: Azure/setup-helm@v1.1
 #      - name: Login to the ACR using helm
