--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -107,79 +107,35 @@ jobs:
       - name: Setting branch name variable
         run: |
           echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
-      - name: Retrieve slack message template
+      - name: Retrieve slack message success template
+        if: ${{ success() }}
         id: slack_template
-        run: echo MY_STRING=$(cat .github/success_slack_message.tmpl) >> $GITHUB_ENV
+        run: echo SLACK_MESSAGE=$(cat .github/success_slack_message.tmpl) >> $GITHUB_ENV
+      - name: Retrieve slack message failed template
+        if: ${{ failure() }}
+        id: slack_template
+        run: echo SLACK_MESSAGE=$(cat .github/failed_slack_message.tmpl) >> $GITHUB_ENV
+      - name: Retrieve slack message canceled template
+        if: ${{ cancelled() }}
+        id: slack_template
+        run: echo SLACK_MESSAGE=$(cat .github/canceled_slack_message.tmpl) >> $GITHUB_ENV
       - name: TEST template variable
         run: echo ${{ env.MY_STRING }}
-#      - name: Install helm
-#        uses: Azure/setup-helm@v1.1
-#      - name: Login to the ACR using helm
-#        run: |
-#          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
-#      - name: Save helm chart to locally
-#        run: |
-#          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
-#      - name: Publish chart to the ACR
-#        run: |
-#          helm chart push ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
-##      - name: Build notification
-##        if: always()
-##        uses: adamkdean/simple-slack-notify@master
-##        with:
-##          channel: '#notifications-charts'
-##          status: ${{ job.status }}
-##          success_text: '${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }} build completed successfully'
-##          failure_text: '${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }} failed'
-##          cancelled_text: '${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }} was cancelled'
-##          fields: |
-##            [
-##              {
-##                "title": "Action URL",
-##                "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}",
-##                "short": false
-##              },
-##              {
-##                "title": "Version",
-##                "value": "High",
-##                "short": false
-##              }
-##            ]
-#      - name: Notify slack
-#        env:
-#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-#        uses: pullreminders/slack-action@master
-#        with:
-##          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
-#          args:
-#            '{
-#              \"channel\":\"C02AJKXC8UT\",
-#              \"color\": \"#36a64f\",
-#              \"blocks\": [
-#                {
-#                  \"type\": \"section\",
-#                  \"text\": {
-#                    \"type\": \"mrkdwn\",
-#                    \"text\": \"Hello, Assistant to the Regional Manager Dwight! *Michael Scott* wants to know where youd like to take the Paper Company investors to dinner tonight.\n\n *Please select a restaurant:*\"
-#                  }
-#                },
-#                {
-#                  \"type\": \"section\",
-#                  \"text\": {
-#                    \"type\": \"mrkdwn\",
-#                    \"text\": \"This is a section block with a button.\"
-#                  },
-#                  \"accessory\": {
-#                    \"type\": \"button\",
-#                    \"text\": {
-#                      \"type\": \"plain_text\",
-#                      \"text\": \"Click Me\",
-#                      \"emoji\": true
-#                    },
-#                    \"value\": \"click_me_123\",
-#                    \"url\": \"https://google.com\",
-#                    \"action_id\": \"button-action\"
-#                  }
-#                }
-#              ]
-#            }'
+
+      - name: Install helm
+        uses: Azure/setup-helm@v1.1
+      - name: Login to the ACR using helm
+        run: |
+          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
+      - name: Save helm chart to locally
+        run: |
+          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
+      - name: Publish chart to the ACR
+        run: |
+          helm chart push ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
+      - name: Notify slack
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: pullreminders/slack-action@master
+        with:
+          args: ${{ env.SLACK_MESSAGE }}
