--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -135,8 +135,8 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: pullreminders/slack-action@master
         with:
-          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
-#          args: '${{ env.SLACK_MESSAGE_SUCCESS }}'
+#          args: '{\"channel\":\"C02AJKXC8UT\",\"text\":\"Hello world\"}'
+          args: '${{ env.SLACK_MESSAGE_SUCCESS }}'
       - name: Notify slack failure
         if: ${{ failure() }}
         env:
